# haggle

./: .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  hacs.json  info.md  pyproject.toml
.claude/: settings.json
.claude/agents/: agl-api-explorer.md  async-performance-reviewer.md  code-quality-reviewer.md  energy-domain-expert.md  ha-integration-architect.md  ha-test-writer.md  release-manager.md  security-reviewer.md
.claude/commands/: hassfest.md  new-entity.md  pr.md  release.md  wt.md
.claude/hooks/: format-python.sh  guard-main-branch.sh  inject-branch-context.sh  validate-manifest.sh
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  allowed_signers  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/settings/: README.md  repo-admin-snapshot.json  repo-public.json  ruleset-protect-main.json  ruleset-protect-release-tags.json
.github/workflows/: ci.yml  codeql.yml  compat.yml  fuzz.yml  hacs.yml  hassfest.yml  release.yml  scorecard.yml  settings-drift.yml
custom_components/haggle/: __init__.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  sensor.py  strings.json
custom_components/haggle/agl/: __init__.py  client.py  models.py  parser.py  pinning.py
custom_components/haggle/translations/: en.json
docs/: delivery-metrics.md  diagnostics.md  energy-dashboard.md  releasing.md  testing.md  threat-model.md
docs/agents/: injection-corpus.md  triage-routine.md
docs/compliance/: conformance.md  secure-sdlc-standard.md
scripts/: access-review.sh  check_claude_coauthor.sh  delivery_metrics.py  export-settings.sh  normalize-repo-public.jq  normalize-ruleset.jq  validate_manifest.py  wt
tests/: __init__.py  conftest.py  test_agl_client.py  test_config_flow.py  test_const.py  test_coordinator_statistics.py  test_diagnostics.py  test_init.py  test_parser.py  test_pinning.py  test_recorder_statistics.py  test_sensor.py
tests/fixtures/: PROVENANCE.md  bill_period_response.json  hourly_response.json  overview_response.json  overview_solar_response.json  plan_response.json  solar_hourly_response.json  solar_plan_response.json  tou_hourly_response.json  tou_plan_response.json
tests/fuzz/: fuzz_parser.py  requirements.txt
webapp/: README.md  pyproject.toml  start.sh
webapp/webapp/: __init__.py  _bootstrap.py  analytics.py  auth.py  main.py  parser_solar.py  poller.py  setup_flow.py  storage.py
webapp/webapp/static/: index.html
