[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "haggle-webapp"
version = "0.1.0"
description = "Standalone web dashboard for AGL Australia smart-meter data — reuses the haggle AGL client without Home Assistant."
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10",
    "cryptography>=43",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = ["ruff>=0.7"]

[tool.hatch.build.targets.wheel]
packages = ["webapp"]
